updating site on 2022年 4月18日 星期一 12时42分22秒 CST

--- a/content/cn/posts/2022-04-20-phd申请.md
+++ b/content/cn/posts/2022-04-20-phd申请.md
@@ -38,6 +38,7 @@ tags:
 6. 所有学校的成绩单：除了pdf版本，还需要准备>=3份的密封盖章的纸质版。给本科负责毕业生成绩单的档案馆老师打电话密封盖章，让同学带给我。研究生的自己去机子打出来找老师密封盖章。申请期间我去DHL海淀快递网点（在清华旁边）给iu、msu各寄了一份，录取后还要给接offer的学校再寄一份。
 7. writing sample：大部分学校是可以自己选择交or不交，极个别必须要交or不能交。我交了，在面试iu的时候老师也针对writing sample提了问题。
 
+
 ## 我的时间线（踩ddl选手）
 ### 21年1月：第一次考gre
 研一寒假考试完集中准备了10天去考的，准备很不充分，分数也不理想（149+169+3.5），但是体验了考试的流程和强度。
@@ -79,6 +80,11 @@ tags:
 
 ### 22年4月15日：接offer
 所有学校的accept/decline offer的截止时间都是4月15号，但如果你确定了不去某项目的话最好立刻拒掉offer，给其他waiting一个机会。我在4月14接了rice的offer。参考了感兴趣方向老师多少、[专业排名](https://www.usnews.com/best-graduate-schools/top-humanities-schools/economics-rankings)、地理位置、到手funding多少、安全等。
+
+
+## 我的基本情况
+北师大经济学学士，排名3/49，绩点89.92，没上实变函数。
+人大财政学研究生2nd year（不拿学位），绩点3.75，三高A A A-。
 
 ## 参考的论坛
 1. [gradcafe](https://www.thegradcafe.com/survey/?program=Economics)：很多人在这上面更新各个学校的进度，很有参考价值。
