updating site on 2022年 4月18日 星期一 19时15分37秒 CST

--- a/content/cn/posts/2021-01-07-phd.md
+++ b/content/cn/posts/2021-01-07-phd.md
@@ -32,10 +32,10 @@ tags:
 
 ## 我的时间线（踩ddl选手）
 ### 21年1月：第一次考gre
-研一寒假考试完集中准备了10天去考的，准备很不充分，分数也不理想318（149、169）+3.5，但是体验了考试的流程和强度。
+研一寒假期末考试完集中准备了10天去考的，准备很不充分，分数也不理想318（149、169）+3.5，但是体验了考试的流程和强度。
 
 ### 21年6月：第二次考gre
-研一暑假考试完集中准备了2周去考的，[刷完了填空1500，没有刷阅读350](https://bbs.gter.net/thread-2442140-1-1.html)，但是出分了324（154、170）+4.0，就不再考了。
+研一暑假期末考试完集中准备了2周去考的，[刷完了填空1500，没有刷阅读350](https://bbs.gter.net/thread-2442140-1-1.html)，但是出分了324（154、170）+4.0，就不再考了。
 - 备考心得：
 - 语文verbal：gre的填空和阅读可能有一半都是机经（[填空1500和阅读350](https://bbs.gter.net/thread-2442140-1-1.html)）中的原题，只需要把机经中的题目答案背过语文就可以考150+了。我只背了填空1500考了154，如果把阅读350也做一遍可能可以考更高的分。
 - 数学quantitative：我在复习的时候把[难题170](http://cdn.gre-edu.com/%E5%B7%8D%E5%93%A5GRE%E6%95%B0%E5%AD%A6170%E9%9A%BE%E9%A2%983.0.pdf)刷了一遍，其实都是初中难度，顶多再加一些高中的排列组合，都很简单，不马虎的话很好考170。
